[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-schema = { version = "0.5.0", default-features = false, features = [ "migration", "debug-print" ] }
sea-orm = { version = "^0.6", features = [ "sqlx-mysql", "runtime-actix-native-tls", "macros" ], default-features = false }
entity = { path = "../entity" }
